# bedbug-app

./: .coverage  .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt
bedbug_app/: __init__.py  auth.py  helper.py  schema.sql  site.py
bedbug_app/static/: style.css
bedbug_app/templates/: base.html
bedbug_app/templates/auth/: login.html  register.html
bedbug_app/templates/site/: create.html  index.html  results.html  upload.html
instance/: flaskr.sqlite
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
